Added changes for email, service manager, mechanic

--- a/email-service/email-service/src/main/resources/templates/service-completion.html
+++ b/email-service/email-service/src/main/resources/templates/service-completion.html
@@ -95,11 +95,11 @@
             </tr>
             <tr>
                 <th>Estimated Cost</th>
-                <td th:text="|₹${estimatedCost}|">₹5000</td>
+                <td th:text="|$${estimatedCost}|">$5000</td>
             </tr>
             <tr>
                 <th>Final Cost</th>
-                <td th:text="|₹${finalCost}|">₹5500</td>
+                <td th:text="|$${finalCost}|">$5500</td>
             </tr>
             <tr>
                 <th>Completion Date</th>
